--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -439,7 +439,7 @@ h5 {
     bottom: 0;
     left: 0;
     width: 100%;
-    background: rgba(0,0,0,0.9);
+    /* background: rgba(0,0,0,0.9); */
     padding: 15px 20px;
 }
 
